src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__cast_int32_to_pg_legacy_char__impl.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: PgLegacyChar,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: PgLegacyChar,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastPgLegacyCharToInt32(
            CastPgLegacyCharToInt32,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
